* java 1.4 fix * docu fix.